on mobile devices, fix for incorrect display of the chat page

--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -121,18 +121,18 @@
     @media (max-width: 992px){
         padding-right: 15px;
         min-height: 250px;
-        max-height: 450px;
+        max-height: 400px;
     }
     @media (max-width: 391px){
         padding-right: 15px;
         min-height: 200px;
-        max-height: 380px;
+        max-height: 340px;
     }
 
     @media (max-width: 376px){
         padding-right: 15px;
         min-height: 150px;
-        max-height: 180px;
+        max-height: 160px;
     }
 }
 
